--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -50,8 +50,8 @@
 \renewcommand\lstlistingname{Algoritme}
 \addto{\captionsdanish}{\renewcommand{\abstractname}{Abstract}}
 \numberwithin{equation}{section}
-\addto{\captionsbahasa}{%
-	\renewcommand*{\refname}{Daftar Pustaka}
+\addto{\captionsdanish}{%
+	\renewcommand*{\refname}{}
 }
 
 \pagestyle{headings}
