--- a/Numerisk integration.tex
+++ b/Numerisk integration.tex
@@ -10,7 +10,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{hyperref}
 \usepackage{float}
-%\usepackage[margin=1in]{geometry}
+\usepackage[margin=1.3in]{geometry}
 
 \definecolor{lightgray}{rgb}{.9,.9,.9}
 \definecolor{darkgray}{rgb}{.4,.4,.4}
